@@ -1,4 +1,4 @@
-FROM maven:3 AS builder
+FROM maven:3.9-eclipse-temurin-25 AS builder
 
 WORKDIR /build
 COPY pom.xml /build/pom.xml
@@ -7,11 +7,11 @@ RUN mvn -B package; echo ""
 COPY src /build/src
 RUN mvn -B package
 
-FROM eclipse-temurin:25.0.2_10-jre-alpine
+FROM eclipse-temurin:25.0.2_10-jre
 
 WORKDIR /app
 
 COPY --from=builder /build/target/ChatWatcher-jar-with-dependencies.jar .
 
 ENTRYPOINT []
-CMD ["java", "-jar", "ChatWatcher-jar-with-dependencies.jar"]
+CMD ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "ChatWatcher-jar-with-dependencies.jar"]
